Fixed main opacity for burger menu in dark mode
Fixed main opacity for burger menu in dark mode

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -6,7 +6,7 @@ header {
   align-items: center;
   will-change: top;
   transition: top 0.35s ease;
-  padding: 1em 2em;
+  padding: 0.9em 1.8em;
   background: rgb(255, 255, 255);
   color: rgb(28, 0, 68);
   z-index: 2;
@@ -163,19 +163,19 @@ header .header-bar .gn ul li a {
   ------- Media Queries ----------
   ------------------------------ */
 }
-.artifact-pg .img-container {
+.artifact-pg .proj-img-container {
   width: 100%;
   max-height: 25em;
   overflow: hidden;
 }
-.artifact-pg .img-container .project-img {
+.artifact-pg .proj-img-container .project-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 .artifact-pg .project-overview {
   flex-direction: column;
-  padding: 3em 1em;
+  padding: 3em 1.8em;
   height: 80vh;
 }
 .artifact-pg .project-overview .project-details .project-skills {
@@ -251,7 +251,7 @@ header .header-bar .gn ul li a {
   transition: all 0.35s ease-in-out;
 }
 .artifact-pg .more-projects {
-  margin: 2em 0;
+  margin: 0.5em 0 2.5em;
   padding: 2.5em 1.5em 2em;
   text-align: center;
   background-color: rgb(28, 0, 68);
@@ -433,7 +433,7 @@ a {
 --------- Dark/Light Mode ------
 ------------------------------ */
 .dark-mode {
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(21, 21, 21);
 }
 .dark-mode h1, .dark-mode h3 {
   color: rgb(217, 215, 215);
@@ -456,7 +456,7 @@ a {
   box-shadow: none;
 }
 .dark-mode header {
-  background: rgb(22, 22, 22);
+  background: rgb(21, 21, 21);
   color: rgb(255, 255, 255);
 }
 .dark-mode header .header-bar .logo svg {
@@ -477,10 +477,10 @@ a {
   background-color: rgb(28, 0, 68);
 }
 .dark-mode header .header-bar .gn {
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(21, 21, 21);
 }
 .dark-mode header .header-bar .gn ul {
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(21, 21, 21);
 }
 .dark-mode header .header-bar .gn ul li a {
   color: rgb(217, 215, 215);
@@ -489,7 +489,7 @@ a {
   color: rgb(217, 215, 215);
 }
 .dark-mode .intro .blobwindow {
-  border: rgb(22, 22, 22) solid 2px;
+  border: rgb(21, 21, 21) solid 2px;
   box-shadow: none;
 }
 .dark-mode .about .name-title, .dark-mode .about .career-role, .dark-mode .about p {
@@ -516,19 +516,19 @@ a {
 }
 .dark-mode .artifact-pg .project-overview .project-details .links-btn-container .live-link {
   background-color: rgb(217, 215, 215);
-  color: rgb(22, 22, 22);
+  color: rgb(21, 21, 21);
 }
 .dark-mode .artifact-pg .project-overview .project-details .links-btn-container .live-link:hover {
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(21, 21, 21);
   color: rgb(217, 215, 215);
 }
 .dark-mode .artifact-pg .project-overview .project-details .links-btn-container .code-link {
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(21, 21, 21);
   color: rgb(217, 215, 215);
 }
 .dark-mode .artifact-pg .project-overview .project-details .links-btn-container .code-link:hover {
   background-color: rgb(217, 215, 215);
-  color: rgb(22, 22, 22);
+  color: rgb(21, 21, 21);
 }
 
 .light-mode {
@@ -540,7 +540,7 @@ a {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(21, 21, 21);
   }
   body h1, body h3 {
     color: rgb(217, 215, 215);
@@ -563,7 +563,7 @@ a {
     box-shadow: none;
   }
   body header {
-    background: rgb(22, 22, 22);
+    background: rgb(21, 21, 21);
     color: rgb(255, 255, 255);
   }
   body header .header-bar .logo svg {
@@ -584,10 +584,10 @@ a {
     background-color: rgb(28, 0, 68);
   }
   body header .header-bar .gn {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(21, 21, 21);
   }
   body header .header-bar .gn ul {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(21, 21, 21);
   }
   body header .header-bar .gn ul li a {
     color: rgb(217, 215, 215);
@@ -596,7 +596,7 @@ a {
     color: rgb(217, 215, 215);
   }
   body .intro .blobwindow {
-    border: rgb(22, 22, 22) solid 2px;
+    border: rgb(21, 21, 21) solid 2px;
     box-shadow: none;
   }
   body .about .name-title, body .about .career-role, body .about p {
@@ -623,19 +623,19 @@ a {
   }
   body .artifact-pg .project-overview .project-details .links-btn-container .live-link {
     background-color: rgb(217, 215, 215);
-    color: rgb(22, 22, 22);
+    color: rgb(21, 21, 21);
   }
   body .artifact-pg .project-overview .project-details .links-btn-container .live-link:hover {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(21, 21, 21);
     color: rgb(217, 215, 215);
   }
   body .artifact-pg .project-overview .project-details .links-btn-container .code-link {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(21, 21, 21);
     color: rgb(217, 215, 215);
   }
   body .artifact-pg .project-overview .project-details .links-btn-container .code-link:hover {
     background-color: rgb(217, 215, 215);
-    color: rgb(22, 22, 22);
+    color: rgb(21, 21, 21);
   }
 }
 /* -----------------------------
