--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -6,7 +6,7 @@ header {
     align-items: center;
     will-change: top;
     transition: top 0.35s ease;
-    padding: $sm $lg;
+    padding: $sm*0.9 $sm*1.8;
     background: $color-primary;
     color: $color-secondary;
     z-index: 2;
